# Haskell-Projects

./: .gitignore  BST.hs  README.md
99Probs/: p1.hs  p2.hs  p3.hs  p4.hs  p6.hs  p7.hs  p8.hs
99Probs/1-10/: p1.hs  p10.hs  p2.hs  p3.hs  p4.hs  p5.hs  p6.hs  p7.hs  p8.hs  p9.hs
99Probs/11-20/: p11.hs  p12.hs  p13.hs  p14.hs  p15.hs  p16.hs  p17.hs  p18.hs  p19.hs  p20.hs
99Probs/21-28/: p21.hs  p22.hs  p23.hs  p24.hs  p25.hs  p26.hs  p27.hs  p28.hs
99Probs/31-41/: P31.hs  P32.hs  P33.hs  P34.hs  P35.hs  P36.hs  P37.hs  P39.hs  p31.hs  p32.hs  p33.hs  p34.hs  p35.hs  p36.hs
BookExercises/FirstPrinciples/: anonFunc.hs  cipher.hs  folds.hs  goodBois.hs  greetIfCool1.hs  iPityTheBool.hs  matchingTuples1.hs  print3.hs  print3flipped.hs  typeclass1.hs
BookExercises/FirstPrinciples/Notes/: Ch15Monoids.hs
BookExercises/FirstPrinciples/ch02/: Ch2Prac.hs  print3broken.hs
BookExercises/FirstPrinciples/ch03/: casePrac.hs
BookExercises/FirstPrinciples/ch06/: goats.hs
BookExercises/FirstPrinciples/ch07/: curry.hs  sqcube.hs  zipEx1.hs
BookExercises/FirstPrinciples/ch09/: caeser.hs
BookExercises/FirstPrinciples/ch10/: Ch10Ex.hs
BookExercises/FirstPrinciples/ch11/: LangEx.hs  bst.hs  deconVal.hs  hutton.hs  iPityTheBool.hs  phone.hs  vigenere.hs
BookExercises/FirstPrinciples/ch12/: either.hs  maybe.hs  person.hs  stringProcessing.hs  unfold.hs
BookExercises/FirstPrinciples/ch13/person/: LICENSE  person.cabal
BookExercises/FirstPrinciples/ch13/person/src/: Main.hs  Person.hs
BookExercises/FirstPrinciples/ch14/ChEx/: ChEx.cabal  README.md
BookExercises/FirstPrinciples/ch14/ChEx/src/: ChEx.hs
BookExercises/FirstPrinciples/ch14/ChEx/tests/: Tests.hs
BookExercises/FirstPrinciples/ch14/morse/: morse.cabal
BookExercises/FirstPrinciples/ch14/morse/src/: Main.hs  Morse.hs
BookExercises/FirstPrinciples/ch14/morse/tests/: Tests.hs
BookExercises/FirstPrinciples/ch15/: Ch15Monoids.hs  ChEx.hs  First.hs  InvalidMonoid.hs  MadLibs.hs  Madness.hs  MonoidProperties.hs  Optional.hs  Semigroup.hs  SemigroupsAndMonoids.hs
BookExercises/FirstPrinciples/ch16/: .FunctorNotes.txt.swm  .FunctorNotes.txt.swn  .s164.hs.swm  .s164.hs.swn  ;  ChEx.hs  Either.hs  ExBeKind.hs  FlipFunctor.hs  FunctorNotes.txt  HeavyLifting.hs  IOFunctor.hs  IgnoreMaybe.hs  InstancesOfFunc.hs  InstancesOfFunc2.hs  Possibly.hs  ReplaceExperiment.hs  ShortEx.hs  SomethingDiff.hs  commonFunctors.hs  functors1.hs  functors2.hs  functors3.hs  functors4.hs  s164.hs
BookExercises/FirstPrinciples/ch17/: Apl1.hs  ApplicativeNotes.txt  BadMonoid.hs  CodeEx1.hs  Constant.hs  Cow.hs  FixerUpper.hs  Identity.hs  Lookups.hs  Validate.hs
BookExercises/LYAH/: 02-starting-out.hs  07-modules.hs  09-input-and-output.hs  DistanceConversions.hs  ch08.hs  video.hs
Euler/: README.md  e1.hs  readme.md
FirstPrinciples/: LambdaCalcNotes.txt  cipher.hs  fixerUpper.hs  num.hs  poemLines.hs  registerdUser1.hs  registerdUser2.hs  stdFunc1.hs  test.hs
FirstPrinciples/Ch2/: FunctionWithLet.hs
FirstPrinciples/Ch3/: print2.hs  toOrLocal.hs
FirstPrinciples/Ch5/: arith3broken.hs  typeInference2.hs
LYAH/: 03-types-and-typeclasses.hs  04-syntax-in-functions.hs  05-recursion.hs  06-higher-order-functions.hs  08-making-our-own-types-and-typeclasses.hs  BST.hs  baby.hs  higherOrder.hs
LYAH/baby1/: video.hs
Notes/: DontFearTheMonadNotes.txt  MonadsComputerphile.hs
RWH/: ch2.hs
RandomProjects/: BST.cpp  addChar.hs
RandomProjects/BST/: BST.h
RandomProjects/CS194/: readme.md
RandomProjects/CS194/hw1/: creditCardVal.hs  towersOfHanoi.hs
RandomProjects/Euler/: e1.hs  e2.hs  readme.md
RandomProjects/TruleyRandom/BaseBallCSV/: BaseBallCSV.cabal  README.md
RandomProjects/TruleyRandom/BaseBallCSV/src/: Baseball.hs  Main.hs
RandomProjects/TruleyRandom/Transformers/: Transformers.hs
RandomProjects/TruleyRandom/json/: json.hs  jsonTut.hs
RandomProjects/TruleyRandom/projectTest/: .gitignore  ChangeLog.md  package.yaml  stack.yaml
RandomProjects/adventOfCode/2017/: day1.hs  day2.hs  dt2.hs
RandomProjects/gloss-bitmaps/src/: Lib.hs
RandomProjects/telp/: LICENSE
TM/: tmB.hs
baby1/: .video.hs.swp  video  video.hs
exercism/haskell/: readme.md
exercism/haskell/acronym/: acronym.cabal
exercism/haskell/bob/: bob.cabal
exercism/haskell/collatz-conjecture/: collatz-conjecture.cabal
exercism/haskell/complex-numbers/: complex-numbers.cabal
exercism/haskell/diamond/: Diamond1.hs  diamond.cabal
exercism/haskell/difference-of-squares/: difference-of-squares.cabal
exercism/hello-world/: hello-world.cabal
(+85 files in other folders)
