name:                BaseBallCSV
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ian Grant
maintainer:          igrant@protonmail.com
copyright:           BSD 3
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable baseball
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       vector,
                       cassava
  default-language:    Haskell2010
