name:                person
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Ian-Grant/person#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Grant
maintainer:          igrant@protonmail.com
copyright:           BSD 3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable person
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , person

library
  hs-source-dirs:      src
  exposed-modules:     Person
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

