name:                ChEx
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Ian-Grant/ChEx#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Grant
maintainer:          igrant@protonmail.com
copyright:           BSD 3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ChEx
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src
  exposed-modules:     ChEx
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite tests
  hs-source-dirs:      tests
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,hspec,QuickCheck
