name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Ian-Grant/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Grant
maintainer:          igrant@protonmail.com
copyright:           BSD 3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,morse
                      ,QuickCheck

library
  exposed-modules: Morse
  ghc-options:  -Wall -fware-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,containers,QuickCheck

