name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Ian-Grant/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Grant
maintainer:          igrant@protonmail.com
copyright:           BSD 3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,morse
                      ,QuickCheck

library
  hs-source-dirs:   src
  exposed-modules: Morse
  ghc-options:  -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,containers,QuickCheck

test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Tests.hs
  default-language: Haskell2010
  build-depends: base, containers, morse, QuickCheck
